# aur-pkgbuild-updater

./: .bors.toml  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Cargo.toml  README.md  base.Dockerfile  bors.toml  deploy.Dockerfile  nitpick-style.toml  renovate.json  tests.Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml  update-aur-packages.yml
src/: commands.rs  helper.sh  main.rs  package.rs  version.rs
src/version_checker/: github.rs  mod.rs  pypi.rs
tests/fixtures/: OUTDATED_PKGBUILD  pypi.json  setup-stub-repository.sh  user-page.html
