[package]
name = "aur-autoupdater"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"
repository = "https://github.com/jaysonsantos/aur-autoupdater"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.80"
camino = { version = "1.1.6", features = ["serde1"] }
color-eyre = "0.6.3"
directories = "6.0.0"
futures = "0.3.30"
lazy_static = "1.4.0"
lenient_semver = "0.4.2"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
scraper = "0.25.0"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[dev-dependencies]
tempdir = "0.3.7"
wiremock = "0.6.0"
